tests/snapshots/gateway/studio/search_autocomplete_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/../../../tests/unit/gateway/studio/support.rs
expression: value
---
{
  "prefix": "se",
  "suggestions": [
    {
      "suggestionType": "title",
      "text": "Search Design"
    },
    {
      "suggestionType": "title",
      "text": "Search Notes"
    }
  ]
}
