tests/snapshots/gateway/studio/search_definition_markdown_observe_hint_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "candidateCount": 2,
  "definition": {
    "crateName": "demo",
    "language": "python",
    "lineEnd": 2,
    "lineStart": 1,
    "name": "AlphaService",
    "path": "packages/python/demo/service.py",
    "projectName": "kernel",
    "rootLabel": "packages",
    "score": 1.0,
    "signature": "class AlphaService:"
  },
  "navigationTarget": {
    "category": "doc",
    "column": null,
    "line": 1,
    "lineEnd": 2,
    "path": "packages/python/demo/service.py",
    "projectName": "kernel",
    "rootLabel": "packages"
  },
  "query": "AlphaService",
  "selectedScope": "definition",
  "sourceLine": 4,
  "sourcePath": "packages/notes/index.md"
}
