tests/snapshots/gateway/studio/search_display_paths_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "hitCount": 0,
  "paths": [],
  "query": "wendao",
  "selectedMode": "vector_only"
}
