tests/snapshots/gateway/studio/search_intent_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
assertion_line: 9
expression: value
---
{
  "graphConfidenceScore": 1.0,
  "hitCount": 2,
  "hits": [
    {
      "bestSection": "pub fn alpha_handler() {}",
      "docType": "symbol",
      "matchReason": "local_symbol_search",
      "path": "packages/rust/crates/demo/src/lib.rs",
      "score": 1.0,
      "stem": "alpha_handler",
      "title": "alpha_handler"
    },
    {
      "bestSection": "Alpha",
      "docType": null,
      "matchReason": "knowledge_section_search",
      "path": "alpha.md",
      "score": 0.82,
      "stem": "alpha",
      "title": "Alpha"
    }
  ],
  "intent": "debug_lookup",
  "intentConfidence": 1.0,
  "query": "alpha_handler",
  "searchMode": "intent_hybrid",
  "selectedMode": "intent_hybrid"
}
